get user from token
