# swagger.yaml
@@ -39,119 +39,119 @@ paths:
             description: Unexpected Error,
   /api/users:
     # returns a jwt token after registration
-   post:
-    description: Returns a json web token after a Successfull registration
-    parameters:
-    - name: New user
-      in: body
-      required: true
-      description: The User json You want to create
-      schema:
-        type: object
-        properties:
-         firtsname:
-          type: 'String'
-          example: 'Firtsname'
-         lastname:
-          type: 'String'
-          example: 'Lastname'
-         email:
-          type: 'String'
-          example: 'email@host.com'
-         username:
-          type: 'String'
-          example: 'username'
-         password:
-          type: 'String'
-          example: '!23Secret'
-    responses:
-      '201':
-        description: created
-        schema:
-          type: object
-          properties:
-            user:
-              type: 'object'
-              properties:
-                firtsname:
-                  type: 'String'
-                  example: 'Firtsname'
-                lastname:
-                  type: 'String'
-                  example: 'Lastname'
-                email:
-                  type: 'String'
-                  example: 'email@host.com'
-                username:
-                  type: 'String'
-                  example: 'username'
-                bio:
-                 type: 'String'
-                 example: 'i like programming'
-                image:
-                 type: 'String'
-                 example: 'image1.png'
+    post:
+      description: Returns a json web token after a Successfull registration
+      parameters:
+        - name: New user
+          in: body
+          required: true
+          description: The User json You want to create
+          schema:
+            type: object
+            properties:
+              firtsname:
+                type: 'String'
+                example: 'Firtsname'
+              lastname:
+                type: 'String'
+                example: 'Lastname'
+              email:
+                type: 'String'
+                example: 'email@host.com'
+              username:
+                type: 'String'
+                example: 'username'
+              password:
+                type: 'String'
+                example: '!23Secret'
+      responses:
+        '201':
+          description: created
+          schema:
+            type: object
+            properties:
+              user:
+                type: 'object'
+                properties:
+                  firtsname:
+                    type: 'String'
+                    example: 'Firtsname'
+                  lastname:
+                    type: 'String'
+                    example: 'Lastname'
+                  email:
+                    type: 'String'
+                    example: 'email@host.com'
+                  username:
+                    type: 'String'
+                    example: 'username'
+                  bio:
+                    type: 'String'
+                    example: 'i like programming'
+                  image:
+                    type: 'String'
+                    example: 'image1.png'
 
-                token:
-                 type: 'String'
-                 example: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VybmFtZSI6InVzZXJuYW0yM2hpMjMxYXNmOSIsImVtYWlsIjoibWVAZ21haWwuY29zaGEiLCJmaXJzdG5hbWUiOiJGcmllZCIsImxhc3RuYW1lIjoiTWlrZWxyaCIsImlhdCI6MTU1NTA1OTc0NX0.NfmPq_sMaD9vmdA7VH0CV2ts_6_q4eql0TiqXQVoS0w'
-      '400':
-        description: Bad request
-      default:
-        description: Unexpected Error
+                  token:
+                    type: 'String'
+                    example: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VybmFtZSI6InVzZXJuYW0yM2hpMjMxYXNmOSIsImVtYWlsIjoibWVAZ21haWwuY29zaGEiLCJmaXJzdG5hbWUiOiJGcmllZCIsImxhc3RuYW1lIjoiTWlrZWxyaCIsImlhdCI6MTU1NTA1OTc0NX0.NfmPq_sMaD9vmdA7VH0CV2ts_6_q4eql0TiqXQVoS0w'
+        '400':
+          description: Bad request
+        default:
+          description: Unexpected Error
   /api/users/login:
-  # returns a jwt token after registration
-   post:
-    description: Returns a json web token after a Successfull registration
-    parameters:
-    - name: New user
-      in: body
-      required: true
-      description: The User json You want to create
-      schema:
-        type: object
-        properties:
-         email:
-          type: 'String'
-          example: 'email@host.com'
-         password:
-          type: 'String'
-          example: '!23Secret'
-    responses:
-      '200':
-        description: Ok
-        schema:
-          type: object
-          properties:
-            user:
-              type: 'object'
-              properties:
-                firtsname:
-                 type: 'String'
-                 example: 'Firtsname'
-                lastname:
-                 type: 'String'
-                 example: 'Lastname'
-                email:
-                 type: 'String'
-                 example: 'email@host.com'
-                username:
-                 type: 'String'
-                 example: 'username'
-                bio:
-                 type: 'String'
-                 example: 'i like programming'
-                image:
-                 type: 'String'
-                 example: 'image1.png'
+    # returns a jwt token after registration
+    post:
+      description: Returns a json web token after a Successfull registration
+      parameters:
+        - name: New user
+          in: body
+          required: true
+          description: The User json You want to create
+          schema:
+            type: object
+            properties:
+              email:
+                type: 'String'
+                example: 'email@host.com'
+              password:
+                type: 'String'
+                example: '!23Secret'
+      responses:
+        '200':
+          description: Ok
+          schema:
+            type: object
+            properties:
+              user:
+                type: 'object'
+                properties:
+                  firtsname:
+                    type: 'String'
+                    example: 'Firtsname'
+                  lastname:
+                    type: 'String'
+                    example: 'Lastname'
+                  email:
+                    type: 'String'
+                    example: 'email@host.com'
+                  username:
+                    type: 'String'
+                    example: 'username'
+                  bio:
+                    type: 'String'
+                    example: 'i like programming'
+                  image:
+                    type: 'String'
+                    example: 'image1.png'
 
-                token:
-                  type: 'String'
-                  example: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VybmFtZSI6InVzZXJuYW0yM2hpMjMxYXNmOSIsImVtYWlsIjoibWVAZ21haWwuY29zaGEiLCJmaXJzdG5hbWUiOiJGcmllZCIsImxhc3RuYW1lIjoiTWlrZWxyaCIsImlhdCI6MTU1NTA1OTc0NX0.NfmPq_sMaD9vmdA7VH0CV2ts_6_q4eql0TiqXQVoS0w'
-      '400':
-        description: Bad request
-      default:
-        description: Unexpected Error
+                  token:
+                    type: 'String'
+                    example: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VybmFtZSI6InVzZXJuYW0yM2hpMjMxYXNmOSIsImVtYWlsIjoibWVAZ21haWwuY29zaGEiLCJmaXJzdG5hbWUiOiJGcmllZCIsImxhc3RuYW1lIjoiTWlrZWxyaCIsImlhdCI6MTU1NTA1OTc0NX0.NfmPq_sMaD9vmdA7VH0CV2ts_6_q4eql0TiqXQVoS0w'
+        '400':
+          description: Bad request
+        default:
+          description: Unexpected Error
   /api/auth/verify/{path}:
     # binds a127 app logic to a route
     get:
@@ -239,59 +239,39 @@ paths:
       responses:
         '200':
           description: Returns an object with data from Github
-              username: 'String'
-              emial: 'abc@XZY.com'
-              bio: 'problem solver'
-              token: '....'
-              image: '....jpg'
-        '404':
-          description: Route not found
-            # responses may fall through to errors
-  /api/auth/forgetpassword:
-    # social user login
+  /api/articles/{articleSlug}/rating:
+    # binds a127 app logic to a route
     post:
-      description: Returns emailed link
+      description: Returns an object with rating of an article
+      produces:
+        - application/json
       parameters:
-        email: 'abc@XYZ.com'
-      responses:
-        '200':
-          description: Success
-          schema:
-            # a pointer to a definition
-            type: emails the link
-            properties:
-              user:
-                message: 'String'
-                emial: 'abc@XZY.com'
-        '404':
-          description: Email not found
-          # responses may fall through to errors
-          default:
-            description: Can not found URL
-  /api/auth/resetpassword:
-    # social user login
-    put:
-      description: Returns 1 on success or 0
+        - in: path
+          name: articleSlug
+          description: it's an id of an existing article
+          required: true
+          type: string
+          example: how-to-4544
       responses:
         '201':
-          description: Success
+          description: Article Rated
           schema:
             # a pointer to a definition
             type: object
             properties:
-              user:
-                username: 'String'
-                emial: 'abc@XZY.com'
-                bio: 'problem solver'
-                token: '....'
-                image: '....jpg'
-        '400':
-          description: invalid token
-          # responses may fall through to errors
-        '201':
-          description: 1
-          # responses may fall through to errors
-          default:
-            description: Can not found URL
-
-  
+              status:
+                type: 'Integer'
+              message:
+                type: 'Object'
+                properties:
+                  status:
+                    type: 'Integer'
+        '401':
+          description: Verification token not found
+          schema:
+            # a pointer to a definition
+            type: object
+            properties:
+              error:
+                type: 'Object'
+                example: 'Verification token not found'
